    - Added a new "NoInterlacedModes" token to the NVIDIA X driver's
      "ModeValidation" option, to allow preventing interlaced modes from
      being validated. Refer to the "X Config Options" appendix of the
      driver README for further details.
    - Added support for the following GPU: A40.

  [ Andreas Beckmann ]
  * Update nv-readme.ids.

 -- Andreas Beckmann <anbe@debian.org>  Thu, 14 Jan 2021 22:37:21 +0100

nvidia-graphics-drivers (460.27.04-1) experimental; urgency=medium

  * New upstream beta 460.27.04 (2020-12-15).
    - Fixed a bug that could cause detailed timing information for displays
      with a large number of detailed timings to be truncated in the X log.
    - Fixed a bug that prevented scaled display resolutions configured via
      the nvidia-settings control panel from being reported by RandR.
    - Added support for the following GPUs: GeForce RTX 3060 Ti, RTX A6000.
    - Added support for RandR rotation and reflection while using an
      NVIDIA-driven display as a PRIME Display Offload sink.
    - Added support for "Reverse PRIME Bypass", an optimization that bypasses
      the bandwidth overhead of PRIME Render Offload and PRIME Display Offload
      in conditions where a render offload application is fullscreen,
      unredirected, and visible only on a given NVIDIA-driven PRIME Display
      Offload output. Use of the optimization is reported in the X log when
      verbose logging is enabled in the X server.
    - Add support for the VK_KHR_acceleration_structure extension.
    - Add support for the VK_KHR_ray_tracing_pipeline extension.
    - Add support for the VK_KHR_ray_query extension.
    - Add support for the VK_KHR_pipeline_library extension.
    - Add support for the VK_KHR_deferred_host_operations extension.
    - Removed the MetaMode string truncation warning for older X Servers when
      saving the X Configuration file from nvidia-settings.
    - Add support for the VK_NV_fragment_shading_rate_enums extension.