@@ -7,7 +7,7 @@ Description: let Kbuild set the compiler version
 
 --- a/Makefile
 +++ b/Makefile
-@@ -78,8 +78,8 @@ else
+@@ -77,8 +77,8 @@ else
  
    .PHONY: modules module clean clean_conftest modules_install
    modules clean modules_install:
