@@ -5,7 +5,7 @@ Description: use KBUILD_CFLAGS and (KBUILD_)LDFLAGS
 
 --- a/Kbuild
 +++ b/Kbuild
-@@ -110,6 +110,7 @@ NV_CONFTEST_CMD := /bin/sh $(NV_CONFTEST
+@@ -111,6 +111,7 @@ NV_CONFTEST_CMD := /bin/sh $(NV_CONFTEST
  NV_CFLAGS_FROM_CONFTEST := $(shell $(NV_CONFTEST_CMD) build_cflags)
  
  NV_CONFTEST_CFLAGS = $(NV_CFLAGS_FROM_CONFTEST) $(EXTRA_CFLAGS) -fno-pie
@@ -26,7 +26,7 @@ Description: use KBUILD_CFLAGS and (KBUILD_)LDFLAGS
  #
 --- a/Makefile
 +++ b/Makefile
-@@ -111,7 +111,7 @@ else
+@@ -110,7 +110,7 @@ else
    # cannot be defined in the *Kbuild files, which are only used during stage 1.
  
    %-linux.o: modules
