@@ -11,6 +11,7 @@ nvidia-graphics-drivers (460.32.03-1) UNRELEASED; urgency=medium
 
   [ Andreas Beckmann ]
   * Update nv-readme.ids.
+  * Refresh patches.
 
  -- Andreas Beckmann <anbe@debian.org>  Thu, 14 Jan 2021 22:37:21 +0100
 
